--- a/FullStack/Views/Gigs/Create.cshtml
+++ b/FullStack/Views/Gigs/Create.cshtml
@@ -7,19 +7,20 @@
 <h2>Add a Gig</h2>
 @using (Html.BeginForm("Create", "Gigs"))
 {
+    <p class="alert alert-info">All Fields are <strong>required</strong>.</p>
     <div class="form-group">
         @Html.LabelFor(m => m.Venue)
-        @Html.TextBoxFor(m => m.Venue, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Venue, new { @class = "form-control",autofocus = "autofocus" })
         @Html.ValidationMessageFor(m=>m.Venue)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Date)
-        @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Date, new { @class = "form-control", placeholder = "eg 1 Jan 2018" })
         @Html.ValidationMessageFor(m => m.Date)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Time)
-        @Html.TextBoxFor(m => m.Time, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Time, new { @class = "form-control" placeholder = "eg 20:00"})
         @Html.ValidationMessageFor(m => m.Time)
     </div>
     <div class="form-group">
